--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navigation></app-navigation>
 
 <div class="container" style="margin-top: 100px;">
-    <app-home></app-home>
+    <router-outlet></router-outlet>
 </div>
