--- a/client/src/app/navigation/navigation.component.html
+++ b/client/src/app/navigation/navigation.component.html
@@ -1,24 +1,24 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
     <div class="container">
-        <a class="navbar-brand" href="#">Dating Aid</a>
+        <a class="navbar-brand" routerLinkActive="active" routerLink="/">Dating Aid</a>
 
-        @if(accountservice.currentUser()){
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                    <a class="nav-link">Matches</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Lists</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Messages</a>
-                </li>
+                @if(accountservice.currentUser()) {
+                    <li class="nav-item">
+                        <a class="nav-link" routerLinkActive="active" routerLink="/members">Matches</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLinkActive="active" routerLink="/liked-members">Lists</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
+                    </li>
+                }
             </ul>
-        }
 
-        @if(accountservice.currentUser()){
+        @if(accountservice.currentUser()) {
             <div dropdown class="dropdown">
-                <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">User</a>
+                <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">{{accountservice.currentUser()?.username | titlecase}}</a>
                 <div *dropdownMenu class="dropdown-menu">
                     <a class="dropdown-item">Edit Profile</a>
                     <div class="dropdown-divider"></div>
@@ -27,13 +27,13 @@
             </div>
         }
 
-        @if(!accountservice.currentUser()){
+        @if(!accountservice.currentUser()) {
             <form class="d-flex" #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
                 <input name="username" [(ngModel)]="model.username" class="form-control me-2" type="text"
                     placeholder="Username">
                 <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password"
                     placeholder="Password">
-                <button class="btn btn-outline-success" type="submit">Login</button>
+                <button class="btn btn-dark" type="submit">Login</button>
             </form>
         }
         
