--- a/client/src/app/navigation/navigation.component.html
+++ b/client/src/app/navigation/navigation.component.html
@@ -14,6 +14,9 @@
                         <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
                     </li>
                 }
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/errors">Errors</a>
+                </li>
             </ul>
 
         @if(accountservice.currentUser()) {
