--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,1 +1,53 @@
-<p>member-detail works!</p>
+@if(member) {
+    <div class="row">
+        <div class="col-4">
+            <div class="card">
+                <img class="card-img img-thumnail" src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}">
+                <div class="card-body">
+                    <div>
+                        <strong>Location:</strong>
+                        <p>{{member.country}} , {{member.city}}</p>
+                    </div>
+                    <div>
+                        <strong>Age:</strong>
+                        <p>{{member.age}}</p>
+                    </div>
+                    <div>
+                        <strong>Last Active:</strong>
+                        <p>{{member.lastActive}}</p>
+                    </div>
+                    <div>
+                        <strong>Member Since:</strong>
+                        <p>{{member.created}}</p>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="btn-group d-flex">
+                        <button class="btn btn-primary">Like</button>
+                        <button class="btn btn-dark">Messages</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-8">
+            <tabset class="member-tabs">
+                <tab heading="About {{member.knownAs}}">
+                    <h4>Description</h4>
+                    <p>{{member.introduction}}</p>
+                </tab>
+                <tab heading="Interest">
+                    <h4>Interest</h4>
+                    <p>{{member.intrests}}</p>
+                </tab>
+                <tab heading="Photos" #photoTab="tab">
+                    @if (photoTab.active) {
+                        <gallery [items]="images" class="gallery"></gallery>
+                    }
+                </tab>
+                <tab heading="Messages">
+                    <p>Messages feature coming soon!</p>
+                </tab>
+            </tabset>
+        </div>
+    </div>
+}
