--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,5 @@
+<ngx-spinner><h3>Loading...</h3></ngx-spinner>
+
 <app-navigation></app-navigation>
 
 <div class="container" style="margin-top: 100px;">
