--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -55,7 +55,7 @@
                     </form>
                 </tab>
                 <tab heading="Edit Photos">
-                    <p>Photo edit feature coming soon</p>
+                    <app-photo-editor [member]="member" (memberChange)="onMemberChange($event)"></app-photo-editor>
                 </tab>
             </tabset>
         </div>
