--- a/client/src/app/navigation/navigation.component.html
+++ b/client/src/app/navigation/navigation.component.html
@@ -21,6 +21,7 @@
 
         @if(accountservice.currentUser()) {
             <div dropdown class="dropdown">
+                <img class="me-2" src="{{accountservice.currentUser()?.photoUrl || './assets/user.png'}}" alt="Members main image">
                 <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">{{accountservice.currentUser()?.username | titlecase}}</a>
                 <div *dropdownMenu class="dropdown-menu">
                     <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
