--- a/client/src/app/navigation/navigation.component.html
+++ b/client/src/app/navigation/navigation.component.html
@@ -1,45 +1,54 @@
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" routerLinkActive="active" routerLink="/">Dating Aid</a>
+        <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                @if(accountservice.currentUser()) {
-                    <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/members">Matches</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/liked-members">Lists</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
-                    </li>
-                }
+
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            @if (accountService.currentUser()) {
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="active" routerLink="/errors">Errors</a>
+                    <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
                 </li>
-            </ul>
+                <li class="nav-item">
+                    <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a>
+                </li>
+            }
+            <li class="nav-item">
+                <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
+            </li>
+        </ul>
 
-        @if(accountservice.currentUser()) {
-            <div dropdown class="dropdown">
-                <img class="me-2" src="{{accountservice.currentUser()?.photoUrl || './assets/user.png'}}" alt="Members main image">
-                <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">{{accountservice.currentUser()?.username | titlecase}}</a>
-                <div *dropdownMenu class="dropdown-menu">
-                    <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" (click)="logout()">Logout</a>
-                </div>
+        @if (accountService.currentUser()) {
+        <div dropdown class="dropdown">
+            <img 
+                class="me-2"
+                src="{{accountService.currentUser()?.photoUrl || '../assets/img/user.png'}}" 
+                alt="Profile Photo">
+            <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+                {{accountService.currentUser()?.username}}
+            </a>
+            <div *dropdownMenu class="dropdown-menu">
+                <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
+        </div>
         }
 
-        @if(!accountservice.currentUser()) {
-            <form class="d-flex" #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
-                <input name="username" [(ngModel)]="model.username" class="form-control me-2" type="text"
-                    placeholder="Username">
-                <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password"
-                    placeholder="Password">
-                <button class="btn btn-dark" type="submit">Login</button>
-            </form>
+        @if (!accountService.currentUser()) {
+        <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
+            <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
+            <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password"
+                type="password">
+            <button class="btn btn-success" type="submit">Login</button>
+        </form>
         }
-        
+
+
     </div>
 </nav>
