--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -16,7 +16,7 @@
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
             <span>
-                <i class="fa fa-user me-2"> {{member().knownAs}}</i>
+                <i class="fa fa-user me-2"> {{member().knownAs}} , {{member().age}}</i>
             </span>
         </h6>
         <p class="card-text text-muted text-center">{{member().city}}</p>
