--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,7 +1,53 @@
 <div class="row">
-    @for (member of memberService.members(); track member.id) {
+    <div class="text-center mt-3">
+        <h3>Your Matches - {{memberService.paginatedResult()?.pagination?.totalItems}}</h3>
+    </div>
+
+    <div class="container mt-3">
+        <form class="d-flex mb-3" #form="ngForm" (ngSubmit)="loadMembers()">
+            <div class="d-flex mx-2">
+                <label class="col-form-label"> Age Form:</label>
+                <input type="number" class="form-control ms-1" style="width: 70px;" name="minAge" [(ngModel)]="memberService.userParams().minAge">
+            </div>
+            <div class="d-flex mx-2">
+                <label class="col-form-label"> Age To:</label>
+                <input type="number" class="form-control ms-1" style="width: 70px;" name="maxAge" [(ngModel)]="memberService.userParams().maxAge">
+            </div>
+            <div class="d-flex mx-2">
+                <label class="col-form-label"> Show:</label>
+                <select name="gender" style="width: 130px;" class="form-select ms-1" [(ngModel)]="memberService.userParams().gender">
+                    @for (gender of genderList; track gender.value) {
+                        <option [value]="gender.value">{{gender.display}}</option>
+                    }
+                </select>
+            </div>
+            <button class="btn btn-dark ms-1" type="submit">Apply Filters</button>
+            <button class="btn btn-dark ms-1" type="submit" (click)="resetFilters()">Reset Filters</button>
+
+            <div class="col">
+                <div class="btn btn-group float-end">
+                    <button type="button" class="btn btn-primary" name="orderBy" (click)="loadMembers()" btnRadio="lastActive" [(ngModel)]="memberService.userParams().orderBy">Last Active</button>
+                    <button type="button" class="btn btn-primary" name="orderBy" (click)="loadMembers()" btnRadio="created" [(ngModel)]="memberService.userParams().orderBy">Created</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    @for (member of memberService.paginatedResult()?.items; track member.id) {
         <div class="col-2">
             <app-member-card [member]="member"></app-member-card>
         </div>
     }
 </div>
+
+@if (memberService.paginatedResult()?.pagination) {
+    <div class="d-flex jusify-content-center">
+        <pagination [boundaryLinks]="true" 
+            [totalItems]="memberService.paginatedResult()?.pagination!.totalItems"
+            [itemsPerPage]="memberService.paginatedResult()?.pagination!.itemsPerPage"
+            [(ngModel)]="memberService.paginatedResult()?.pagination!.currentPage"
+            (pageChanged)="pageChanged($event)"
+            [maxSize]="10">
+        </pagination>
+    </div>
+}
+
