--- a/client/src/app/navigation/navigation.component.html
+++ b/client/src/app/navigation/navigation.component.html
@@ -13,6 +13,10 @@
                 </li>
                 <li class="nav-item">
                     <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+                </li>
+                <li class="nav-item" *appHasRole="['Admin', 'Moderator']">
+                    <a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a>
+                </li>
             }
         </ul>
 
