--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -3,7 +3,7 @@
         @if (messageService.messageThread().length === 0) {
             <p>No messages to display</p>
         }@else {
-            <ul class="chat">
+            <ul class="chat" #messageScroll style="overflow: scroll; max-height: 500px; scroll-behavior: smooth;">
                 @for (message of messageService.messageThread(); track message.id) {
                    <li>
                         <div>
