--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,9 +1,14 @@
 <div class="row">
     @for (photo of member().photos; track photo.id) {
-    <div class="col-2">
-        <img src="{{photo.url}}" alt="member photo" class="img-thumbnail mb-1">
+    <div class="col-2 img-wrapper">
+        <img src="{{photo.url}}" alt="member photo" class="img-thumbnail mb-1" [class.not-approved]="!photo.isApproved">
+        @if (!photo.isApproved) {
+            <div class="text-center img-text">
+                <span class="text-danger">Awaiting Approval</span>
+            </div>
+        }
         <div class="text-center">
-            <button class="btn btn-secondary btn-sm me-1" [disabled]="photo.isMain" (click)="setMainPhoto(photo)"><i class="fa fa-user-circle-o"></i></button>
+            <button class="btn btn-secondary btn-sm me-1" [disabled]="photo.isMain || !photo.isApproved" [ngClass]='photo.isMain ? "btn-success active" : "btn-outlinesuccess"' (click)="setMainPhoto(photo)"><i class="fa fa-user-circle-o"></i></button>
             <button class="btn btn-primary btn-sm" [disabled]="photo.isMain" (click)="deletePhoto(photo)"><i class="fa fa-trash"></i></button>
         </div>
     </div>
